test/tasty/neg/src-2/TestHKNest2.check
TestHKNest2_fail.scala:6: error: Scala 3 union types are not supported for method foo
  def test16 = new HKClass_15().foo(List(1,2,3)) // error: Union type not supported
                                ^
1 error
